src/App.css
/* ... */
.overflow-hidden {
  overflow: hidden;
}
.flex-col {
  -webkit-box-orient: vertical;
  flex-direction: column;
}
.flex-col,
.flex-row {
  -webkit-box-direction: normal;
}
.flex {
  display: -webkit-box;
  display: flex;
}
.rounded {
  border-radius: 0.25rem;
}
.mx-2 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}
.text-xl {
  font-size: 1.25rem;
}
.text-xxl {
  font-size: 2.4rem;
  line-height: 2rem;
}
.pt-2 {
  padding-top: 0.5rem;
}
.h-16 {
  height: 4rem;
}
.h-8 {
  height: 2rem;
}
.font-bold {
  font-weight: 700;
}
.font-sans {
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
    Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
    Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
}
.flex-auto {
  -webkit-box-flex: 1;
  flex: 1 1 auto;
}
.bg-yellow-100 {
  background-color: #fef8e0;
}
.bg-yellow-200 {
  background-color: #fdefc1;
}
.bg-green-100 {
  background-color: #f0fff4;
}
.bg-green-200 {
  background-color: #c6f6d5;
}
.bg-gray-200 {
  background-color: #edf2f7;
}
.bg-gray-300 {
  background-color: #e2e8f0;
}
.text-sm {
  font-size: 0.875rem;
}
.py-1 {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}
.font-semibold {
  font-weight: 600;
}
.items-center {
  -webkit-box-align: center;
  align-items: center;
}
.graph {
  padding-bottom: 36px;
  border-bottom: #ddd 1px solid;
}
.graph .title {
  color: #767676;
  font-weight: bold;
  margin-bottom: 5px;
  font-size: 13px;
  text-transform: uppercase;
}
#doughnut {
  margin-bottom: 12px;
}
.graph .title {
  padding-top: 12px;
  border-top: #ddd 1px solid;
}

.map {
  width: 100%;
}
.leaflet-container {
  width: 100%;
  height: 100vh;
}

/* Circle Live Dot CSS Start */
.ring-container {
  position: relative;
  align-self: flex-start;
  left: -2px;
  bottom: -1px;
}

.circle {
  width: 10px;
  height: 10px;
  background-color: #de3700;
  border-radius: 50%;
  position: absolute;
  top: 5px;
  left: 5px;
}

.ringring {
  border: 3px solid #de3700;
  border-radius: 30px;
  height: 20px;
  width: 20px;
  position: absolute;
  animation: pulsate 1s ease-out;
  animation-iteration-count: infinite;
  opacity: 0;
}
@keyframes pulsate {
  0% {
    transform: scale(0.1, 0.1);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    transform: scale(1.2, 1.2);
    opacity: 0;
  }
}
/* Circle Live Dot CSS End */

.confirmed-right {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.ring-container .live {
  position: absolute;
  left: 20px;
  top: 2px;
  color: #de3700;
  font-size: 11px;
}
.footerItems {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navbar {
  position: absolute;
  padding: 5px 10px;
  background-color: #444;
  z-index: 9999;
  height: 50px;
  width: calc(100vw - 316px);
  bottom: 0;
  max-height: 50px;
  margin-left: 316px;
  color: #fff;
  opacity: 0.9;
  flex-wrap: nowrap;
  display: flex;
  flex-flow: row nowrap;
  justify-content: flex-start;
}
.navbar-nav {
  flex: 1;
  flex-direction: row;
}
.navbar-items {
  justify-content: space-between;
  flex-grow: 1;
  align-items: center;
}
.nav-item {
  margin-left: 10px;
}
.mapCircle {
  animation: mapCirclePulse 1s ease-out;
  animation-iteration-count: infinite;
  opacity: 0.4;
}
@keyframes mapCirclePulse {
  0% {
    opacity: 0.6;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0.6;
  }
}

.circlePopup .tooltip .topToolTip {
  display: block;
}

.circlePopup .tooltip .topToolTip {
  will-change: transform;
  top: -20px;
  left: 50%;
  transform: translate(-50%, -100%);
  padding: 10px 10px;
  color: #000000;
  background-color: rgba(255, 255, 255, 1);
  font-weight: normal;
  font-size: 13px;
  border-radius: 8px;
  position: absolute;
  z-index: 99999999;
  box-sizing: border-box;
  border: 2px solid #dddddd;
  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.1);
  display: none;
}
.circlePopup .titleInfoBox {
  font-weight: bold;
  font-size: 13px;
  line-height: 18px;
  text-align: center;
  color: #000000;
  margin-bottom: 7px;
}
.circlePopup .statLine {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 20px;
}
.circlePopup .statLine.divider {
  height: 1px;
  background: rgba(0, 0, 0, 0.2);
  margin: 5px 0 4px 0;
}
.circlePopup .stat.confirmed {
  color: #de3700;
}
.circlePopup .stat {
  flex: 1;
  margin-right: 24px;
  height: 20px;
  font-size: 13px;
  line-height: 20px;
}
.circlePopup .statCount.confirmed {
  color: #de3700;
}

.circlePopup .statCount {
  height: 20px;
  font-size: 13px;
  line-height: 20px;
  text-align: right;
}
.circlePopup .legendColor {
  width: 8px;
  height: 8px;
  border-radius: 4px;
  margin-right: 10px;
}
.circlePopup .recovered {
  background-color: #60bb69;
}
.circlePopup .deaths {
  background-color: #767676;
}
.circlePopup .active {
  background-color: #f4c363;
}
.difference {
  color: #de3700;
  font-weight: 600;
  font-size: 20px;
}
.change {
  position: relative;
  left: -3px;
}
.flickity-viewport {
  transition: height 0.2s;
}
.modalButtonsContainer {
  display: flex;
  justify-content: space-around;
  margin-top: 1em;
}
.modalButtonsContainer .yes {
  display: flex;
  justify-content: center;
  align-items: center;
  background: #38a169;
  border-color: #38a169;
  color: #fff !important;
  text-shadow: 0 -1px 1px rgba(0, 40, 50, 0.35);
  border-radius: 4px;
  border: 1px solid #ccc;
  padding: 10px 14px;
  font-weight: 700;
  text-decoration: none;
  cursor: pointer;
}
.modalButtonsContainer .no {
  font-weight: 500;
  background: transparent;
  border: 0;
  cursor: pointer;
}
.getnotifiedbutton {
  color: rgba(255, 255, 255, 1);
  border-color: rgba(0, 0, 0, 0.2);
  position: fixed;
  top: 10px;
  right: 10px;
  box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.1);
  padding: 0.4rem 0.56rem 0.25rem 0.56rem;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 0.3rem;
  z-index: 99;
}
.notificationModalContent > p {
  padding-top: 0.7em;
}
/* ... */

